--- a/MathStuff/MathStuff.csproj
+++ b/MathStuff/MathStuff.csproj
@@ -4,6 +4,11 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <Title>Math Stuff</Title>
+        <Description>Collection of some mathematic stuff i using</Description>
+        <PackageLicenseUrl>https://licenses.nuget.org/MIT</PackageLicenseUrl>
+        <RepositoryUrl>https://github.com/firedef/MathStuff</RepositoryUrl>
+        <PackageTags>mathematics, vectors</PackageTags>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
