--- a/MathStuff/MathStuff.csproj
+++ b/MathStuff/MathStuff.csproj
@@ -9,6 +9,8 @@
         <PackageLicenseUrl>https://licenses.nuget.org/MIT</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/firedef/MathStuff</RepositoryUrl>
         <PackageTags>mathematics, vectors</PackageTags>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageProjectUrl>https://github.com/firedef/MathStuff</PackageProjectUrl>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
