--- a/MathStuff/MathStuff.csproj
+++ b/MathStuff/MathStuff.csproj
@@ -1,5 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
+    
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
@@ -11,6 +11,12 @@
         <PackageTags>mathematics, vectors</PackageTags>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageProjectUrl>https://github.com/firedef/MathStuff</PackageProjectUrl>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <PackageId>MathStuff</PackageId>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/firedef/MathStuff</RepositoryUrl>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
